# kinetichawkes

./: .gitignore  README.md  hawkes-hft-framework.md  research_notebook.ipynb
.github/workflows/: deploy.yml
configs/: MSFT.json
data_scripts/: check_costs.py  inspect_data.py  pull_data.py
gui/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
gui/public/: sim_data.jsonl
gui/src/: App.tsx  data.ts  index.css  plotly.d.ts  types.ts
gui/src/components/: FileDropzone.tsx  HawkesSpike3D.tsx  Plot3D.tsx  StatCard.tsx
gui/src/pages/: BookReplay.tsx  FillAnalytics.tsx  HawkesView.tsx  KineticSurface.tsx  PnLStats.tsx
hawkes-hft/: CMakeLists.txt
hawkes-hft/src/: main.cpp
hawkes-hft/src/book/: Level.hpp  OrderBook.hpp
hawkes-hft/src/feed/: DatabentoAdapter.hpp  OrderEvent.hpp
hawkes-hft/src/models/: HawkesProcess.hpp  HawkesTriple.hpp  KineticQueue.hpp
hawkes-hft/src/risk/: RiskGate.hpp
hawkes-hft/src/sim/: Simulator.hpp
hawkes-hft/src/strategy/: InventoryManager.hpp  MarketMaker.hpp
hawkes-hft/src/util/: Logger.hpp  PriceUtils.hpp
hawkes-hft/tests/: test_inventory_manager.cpp  test_kinetic_queue.cpp
scripts/: calibrate_hawkes.py  fit_gamma.py
